# kavak-lite

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.ci.yml  compose.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 28f544bafddd_add_indexes_to_cars_table.py  a8d7f2f9f521_fix_mileage_km_typo.py  d049065b730f_create_cars_table.py
docker/: dev.Dockerfile
docs/: API_DOCUMENTATION_GUIDE.md
docs/ADR/: 01-07-26-cars-table-indexes.md  12-25-25-car-catalog-search.md  12-25-25-database-foundation.md  12-25-25-interface-definitions-abc.md  12-25-25-monetary-values.md  12-26-25-rest-endpoint-design-pattern.md  12-29-25-database-session-per-request.md  12-29-25-error-handling-strategy.md  MONETARY_VALUES.md
docs/backlog/: DB_FOUNDATIION.md
scripts/: run_migrations.sh  seed_cars.py
src/kavak_lite/adapters/: in_memory_car_catalog_repository.py  in_memory_catalog_repository.py  postgres_car_catalog_repository.py
src/kavak_lite/domain/: car.py  errors.py  financing.py
src/kavak_lite/ports/: car_catalog_repository.py  catalog_repository.py
src/kavak_lite/use_cases/: calculate_financing_plan.py  car_search_catalog.py  get_car_by_id.py  search_car_catalog.py
tests/adapters/: test_in_memory_catalog_repository.py  test_postgres_car_catalog_repository.py
tests/domain/: test_errors.py
tests/use_cases/: test_calculate_financing_plan.py  test_car_search_catalog.py  test_get_car_by_id.py
(+24 files in other folders)
