[project]
name = "kavak-lite"
version = "0.1.0"
description = "Kavak-lite: Python Clean Architecture + REST/GraphQL + gRPC pricing engine"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

